public/notes/kubernetes/cks/manifests/cilium/deny-all-except-dns.yaml
# Scenario 1: Deny All Traffic Except DNS (CiliumNetworkPolicy)
#
# Problem:
# All pods in restricted-namespace should be isolated but must be able to reach the CoreDNS service for name resolution.

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all-except-dns"
  namespace: "restricted-namespace"
spec:
  endpointSelector: {}
  ingress: 
  - {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: "ANY"
