public/notes/kubernetes/cks/manifests/cilium/deny-in-out.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-in-out
  namespace: web
spec:
  endpointSelector: {}
  ingress: 
  - {}
  egress:
  - {}
